	  option.
	- Cleaned up the sources a little bit.

Wed, 22 Aug 2007 08:41:33 +0200

	- More cleaning up and removed some duplicates.

Wed, 29 Aug 2007 15:41:58 +0200

	- Fixed bug in Informix define handling.

Tue, 04 Sep 2007 11:13:55 +0200

	- Synced parser and keyword list.

Mi 26. Sep 12:45:51 CEST 2007

	- Applied patch by ITAGAKI Takahiro <itagaki.takahiro@oss.ntt.co.jp>
	  to get prepare thread-safe.

Sun, 30 Sep 2007 13:37:31 +0200

	- Applied another patch by ITAGAKI Takahiro <itagaki.takahiro@oss.ntt.co.jp>
	  to get memory allocation thread-safe. He also did some cleaning up.

Tue, 02 Oct 2007 11:32:25 +0200

	- ITAGAKI Takahiro <itagaki.takahiro@oss.ntt.co.jp> added thread-safe
	  descriptor handling
	
Wed, 03 Oct 2007 10:48:39 +0200

	- Hopefully fixed some stuff that causes Windows builds to fail.
	- Cleaned up ecpglib and renamed functions that do not need to be
	  exported.
	- Created export list for ecpglib.
	- Also created export list for pgytpeslib and compatlib.
	
Wed, 10 Oct 2007 08:31:44 +0200
	
	- Synced parser and keyword list.

Tue, 06 Nov 2007 09:29:22 +0100

	- Fixed two parser bugs.

Fri, 21 Dec 2007 15:30:39 +0100

	- Fixed a few minor glitches pointed out by splint.

Fri, 28 Dec 2007 12:15:38 +0100

	- Applied patch send by ITAGAKI Takahiro
	  <itagaki.takahiro@oss.ntt.co.jp> to fix bug in connect statement if
	  user name is a variable. 
	- Also fixed test case that didn't detect this.

Fri, 11 Jan 2008 16:16:24 +0100

	- Fixed lexer to correctly parse C quotes.

Sun, 13 Jan 2008 12:52:15 +0100

	- Changed prototype for ECPGdo because some compilers don't like
	  int/enum aliasing in there.

Mon, 14 Jan 2008 10:42:23 +0100

	- Set valid return values even in case of an error to prevent
	  segfaults.

Tue, 15 Jan 2008 11:26:14 +0100

	- Re-enabled variables in fetch/move command.
	- Set pgtypes library version to 3.0.
	- Set compat library version to 3.0.
	- Set ecpg library version to 6.0.
	- Set ecpg version to 4.4.